Avalara Fullqa/src/TrainIt!/objects/Training_Course__c.object
<CustomObject>
    <description>Custom Object to store the list of Course offerings.  Each course can have a number of classes offered for it.</description>
    <fields>
        <fullName>ATC_Available__c</fullName>
        <inlineHelpText>Date when there is Availability for Classes at the Authorized Training Center.</inlineHelpText>
        <label>ATC Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <inlineHelpText>Who are the Potential Course Attendees/Audience.</inlineHelpText>
        <label>Audience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <inlineHelpText>Completed description of the course contents</inlineHelpText>
        <label>Course Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <inlineHelpText>Number of days the course lasts</inlineHelpText>
        <label>Course Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Materials_Workspace__c</fullName>
        <inlineHelpText>Hyperlink to the CRM Content workspace for all related course materials</inlineHelpText>
        <label>Course Materials Workspace</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_TItle__c</fullName>
        <inlineHelpText>Name of the course</inlineHelpText>
        <label>Course Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <inlineHelpText>Date when course made active</inlineHelpText>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inactive__c</fullName>
        <inlineHelpText>Date when course made Inactive</inlineHelpText>
        <label>Date Inactive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_Units__c</fullName>
        <inlineHelpText>How long is this Class being offered?  Days or Hours.</inlineHelpText>
        <label>Duration Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Examination_Available__c</fullName>
        <inlineHelpText>Date when general availability for Technical Examination</inlineHelpText>
        <label>Examination Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Document_Name__c</fullName>
        <inlineHelpText>Virtual classroom disk image name for instructor</inlineHelpText>
        <label>Instructor Document Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to course that is required to be completed prior to this course</inlineHelpText>
        <label>Prerequisite Course</label>
        <referenceTo>Training_Course__c</referenceTo>
        <relationshipName>Training_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <inlineHelpText>List of required prerequisites</inlineHelpText>
        <label>Prerequisites</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <inlineHelpText>The version of the Companies Product this course covers/teaches.</inlineHelpText>
        <label>Product Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <inlineHelpText>Course Revision Number</inlineHelpText>
        <label>Revision</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Document_Name__c</fullName>
        <inlineHelpText>Name of classroom set-up documemt</inlineHelpText>
        <label>Setup Document Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Document_Name__c</fullName>
        <inlineHelpText>Virtual classroom disk image name for the Student.</inlineHelpText>
        <label>Student Document Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTT_Available__c</fullName>
        <inlineHelpText>Date when there is availability for Train-the-Trainer.</inlineHelpText>
        <label>TTT Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Virtual_Available__c</fullName>
        <inlineHelpText>Date when there is availability for Virtual Classroom.</inlineHelpText>
        <label>Virtual Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_URL__c</fullName>
        <inlineHelpText>Link to posting</inlineHelpText>
        <label>Web URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>eLearning_Available__c</fullName>
        <inlineHelpText>Date when there is Availability for Self-Service eLearning.</inlineHelpText>
        <label>eLearning Available</label>
        <type>Date</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All_Active_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Active__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Date_Inactive__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Active Courses</label>
    </listViews>
    <listViews>
        <fullName>All_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Courses</label>
    </listViews>
    <listViews>
        <fullName>All_Courses_with_Prerequisites</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prerequisite_Course__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Courses with Prerequisites</label>
    </listViews>
    <listViews>
        <fullName>All_Courses_without_Prerequisites</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prerequisite_Course__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Courses without  Prerequisites</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Inactive__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Inactive Courses</label>
    </listViews>
    <listViews>
        <fullName>Modified_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Modified This Week</label>
    </listViews>
    <listViews>
        <fullName>Modified_Today</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Modified Today</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>NAME</columns>
        <columns>Course_TItle__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Duration__c</columns>
        <columns>Duration_Units__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Today</label>
    </listViews>
    <nameField>
        <label>Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>